add url and rename things

--- a/elasticlunr.com/manual/index.html
+++ b/elasticlunr.com/manual/index.html
@@ -4,11 +4,10 @@
 </head>
 <body>
   <form>
-    <input type="search" id="inputSuccess1" placeholder="search elasticlunr.js">
-    <a href="#">All</a></div>
+    <input type="search" id="searchQuery" placeholder="Search Site">
+    <a id="searchClear" href="#">Clear</a></div>
   </form>
-  <div id='question-list-container' style="margin-left: 0px; margin-right: 0px;"></div>
-  <div id='question-view-container' style="margin-left: 0px; margin-right: 0px; padding-right: 0px; padding-left: 0px;"></div>
+  <div id='results-container' style="margin-left: 0px; margin-right: 0px; padding-right: 0px; padding-left: 0px;"></div>
 </body>
 
 </html>
